	  common upper half battery driver.
	* drivers/power/max1704x.c:  Add a driver for MAX17040x battery "fuel guage"
	* arch/arm/src/stm32/stm32_i2c.c: Add support for I2C3
	* drivers/usbdev/: Lots of name changes: cdc_serial->cdcacm, usbstrg->usbmsc, 
	  usbser->pl2303
	* drivers/usbdev/composite: Fleshed out support for a composite USB device.
	* drivers/stm3210e-eval/composite and drivers/stm3210e-eval/src/up_composite.c:
	  Add a configuration test the USB composite device.
	* include/nuttx/usb/usb.h, drivers/usbdev/composite_descriptors.c, and
	  drivers/usbdev/cdcacm_descriptors.c:  Add support for the USB Interface
	  Association Descriptor (IAD)
	* arch/arm/src/stm32/stm32_i2c.c: Correct a typo in STM32 I2C3 support
	  (submitted by Mike Smith)
	* arch/*/src/Makefile:  Candidate solution for dependency issue in the board
	  sub-directory:  By making libboard.a a "phony" target, libboard.a should
	  always rebuilt (the end result is worth the small increase in build time)
	  (submitted by Mike Smith).
	* include/net/psock.h:  Added a new low level socket interface that allows the
	  OS to use the socket interface without having a socket descriptor.
	* include/net/psock.h: Removed psock.h.  The new interfaces are moved into
	  nuttx/net.h which already has similar logic.
	* include/nuttx/usb/usb.h: Can't use 'class' as a field name in USB structures.
	  This upsets C++ if usb.h is included. 'class' -> 'classid' in this header
	  file and all places that referenced 'class'
	* drivers/usbdev/usbmsc.c: Fixed some backward conditional compilation.
	* sched/on_exit.c:  Add support for the on_exit() function.,
	* sched/exit.c, task_exithook.c, task_delete.c, sched_releasetcb.c:  Move
	  the logic that closes file descriptors sooner in the task shutdown sequence.
	  When drivers are closed, they may need to do things that require a fully
	  up-and-running task.  Some things cannot be done later when the task is
	  crippled.