@@ -1,8 +1,8 @@
 //***************************************************************************
 // include/cxx/cstdlib
 //
-//   Copyright (C) 2009 Gregory Nutt. All rights reserved.
-//   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
+//   Copyright (C) 2009, 2012 Gregory Nutt. All rights reserved.
+//   Author: Gregory Nutt <gnutt@nuttx.org>
 //
 // Redistribution and use in source and binary forms, with or without
 // modification, are permitted provided that the following conditions
@@ -62,7 +62,12 @@ namespace std
 
   using ::exit;
   using ::abort;
+#ifdef CONFIG_SCHED_ATEXIT
   using ::atexit;
+#endif
+#ifdef CONFIG_SCHED_ONEXIT
+  using ::on_exit;
+#endif
 
   using ::strtol;
   using ::strtod;
